# ClipPoems

./: .gitignore  PRD_ClipPoems.md  README.md  TODO_ClipPoems.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  开发准备文档_ClipPoems.md
.claude/: settings.local.json
corpus-data/: classical_poetry.json  daily_corpus.json  idioms.json  modern_literature.json
corpus-service/: main.py  pyproject.toml
corpus-service/data/: stopwords.txt  user_dict.txt
corpus-service/routers/: __init__.py  corpus.py  crawl.py  tokenize.py
corpus-service/services/: __init__.py  cleaner.py  tokenizer.py
prisma/: schema.prisma
public/: manifest.json  sw.js
src/app/: layout.tsx  page.tsx
src/app/corpus/: page.tsx
src/app/gallery/: page.tsx
src/components/: AppProvider.tsx
src/components/corpus/: ArticleSelector.tsx  CorpusPanel.tsx  CorpusSearch.tsx  FragmentGrid.tsx  RecommendedWords.tsx  WordSelector.tsx
src/components/editor/: Canvas.tsx  CanvasFragment.tsx  DeleteZone.tsx  FragmentTornEdge.tsx  LayerPanel.tsx  Toolbar.tsx
src/components/settings/: BackgroundPicker.tsx  CanvasSettings.tsx  FontSettings.tsx  TextStylePanel.tsx
src/components/shared/: ColorPicker.tsx  DragOverlay.tsx
src/hooks/: useAutoSave.ts  useDragFragment.ts  useKeyboard.ts
src/lib/canvas/: alignment.ts  clipPaths.ts  export.ts
src/lib/corpus/: loader.ts  search.ts  tokenizer.ts
src/lib/utils/: storage.ts
src/store/: canvasStore.ts  corpusStore.ts  uiStore.ts
src/types/: canvas.ts  corpus.ts  export.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
(+1 files in other folders)
