[project]
name = "corpus-service"
version = "0.1.0"
description = "ClipPoems corpus processing microservice (jieba tokenization + corpus management)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jieba>=0.42.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
